Fix z-index issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -81,7 +81,7 @@ figure {
 
 .active {
 	position: relative;
-	z-index: 2;
+	z-index: 3;
 
 	& + .fade {
 		position: fixed;
@@ -89,7 +89,7 @@ figure {
 		left: 0;
 		height: 100vh;
 		width: 100vw;
-		z-index: 1;
+		z-index: 2;
 		background: rgba(#000, 0.9);
 	}
 }
